--- a/chapter_geomorph.tex
+++ b/chapter_geomorph.tex
@@ -4,11 +4,11 @@
 
 \section{Introduction}
 
-Landscape evolution is punctuated by intense erosive episodes driven by flood events triggered by intense rainfall \citep{Wolman1960,newson1980geomorphological,Costa1995}. Understanding the role rainfall plays in erosional processes is of importance to both long-term landscape evolution studies \citep[e.g.][]{rinaldo1995geomorphological,tucker1997drainage,Tucker2000}, which have long sought effective ways of parameterising rainfall patterns within models \citep[e.g][]{Eagleson1978}.  Catchment sensitivity to rainfall variability is also important in the context of environmental prediction, such as predicting the likely geomorphological impacts of intense rainfall and flash flood events \citep[e.g.][]{lane2007interactions,deluis2010rainfall,milan2012geomorphic}. Given the potential of changing hydro-meteorological conditions that may accompany climate change \citep{Kendon2014}, longer-term prediction of catchment sediment yields and erosion patterns has also seen an increased research effort in recent years \citep{coulthard2000modelling,Coulthard2012,hancock2017sediment}, particularly through the use of numerical landscape evolution models \citep{Tucker2010}.
+Landscape evolution is punctuated by intense erosive episodes driven by flood events triggered by intense rainfall \citep{Wolman1960,newson1980geomorphological,Costa1995}. Understanding the role rainfall plays in erosional processes is of importance to both long-term landscape evolution studies \citep[e.g.][]{rinaldo1995geomorphological,tucker1997drainage,Tucker2000}, which have long sought effective ways of parameterising rainfall patterns within models \citep[e.g][]{Eagleson1978}.  Catchment sensitivity to rainfall variability is also important in the context of environmental prediction, such as predicting the likely geomorphological impacts of intense rainfall and flash flood events \citep[e.g.][]{lane2007interactions,deluis2010rainfall,milan2012geomorphic}. Given the potentially changing hydro-meteorological conditions that may accompany climate change \citep{Kendon2014}, longer-term prediction of catchment sediment yields and erosion patterns has also seen an increased research effort in recent years \citep{coulthard2000modelling,Coulthard2012,hancock2017sediment}, The drive to understand how landscapes respond to climatic conditions is aided particularly through the use of numerical landscape evolution models \citep{Tucker2010}, which allow a wide range of scenarios to be tested, and quantify the sensitivity of particular processes to climatic boundary conditions, including rainfall distribution.
 
 Investigation into infrequent but geomorphologically formative flash flooding events has seen a resurgence by recent work such as \citet{Huang2006}, looking at the long-term implications of different geomorphically effective event discharges on fluvial incision. Other studies have sought to quantify the amount of bedrock erosion during individual large flood events \citep[e.g.][]{gupta2007catastrophic,lamb2010rapid,baynes2015erosion}, in an effort to better understand the role that low frequency, but high magnitude events have on landscape evolution. Still, our understanding of catchment-scale landscape evolution is far from complete -- the role that rainfall plays in individual events appears to be highly variable from case-to-case. The behaviour of streams and rivers within catchments can vary in response to the same magnitude of flood event -- some streams may erode during high flows, whereas others may deposit during high flows \citep{turowski2013large}. During small--medium flows \citet{turowski2013large} also report that the behaviour is reversed, with some rivers acting as agents of deposition during floods, rather than being primarily erosional. Further studies have reported that rapid gorge formation can be driven primarily by small to moderate sized floods \citep{anton2015exceptional}, rather than rainfall events of much larger magnitude.
 
-Temporal variability in rainfall patterns is shown to control the evolution of landscapes over geological timescales \citep{Tucker2000,Solyom2004}, influencing the geomorphology of drainage basins and geometry of channel networks. The influence of spatial variability in rainfall patterns has also been shown to affect the outcome of long-term topographic evolution \citep{solyom2007importance,Han2014}, as well as decadal--millenial scale studies that have investigate the role of rainfall resolution on sediment yields and morphological change in catchments \citep{coulthard2016sensitivity}. However, no study has yet looked at the sensitivity of erosion to rainfall spatial patterns in single storm events -- the goal of this chapter is to investigate the potential sensitivity of catchment-scale erosional processes to spatially distributed rainfall inputs.
+Temporal variability in rainfall patterns is shown to control the evolution of landscapes over geological timescales \citep{Tucker2000,Solyom2004}, influencing the geomorphology of drainage basins and geometry of channel networks. The influence of spatial variability in rainfall patterns has also been shown to affect the outcome of long-term topographic evolution \citep{solyom2007importance,han2014modeling,han2015measuring}, as well as decadal--millenial scale studies that have investigate the role of rainfall resolution on sediment yields and morphological change in catchments \citep{coulthard2016sensitivity}. However, no study has yet looked at the sensitivity of erosion to rainfall spatial patterns in single storm events -- the goal of this chapter is to investigate the potential sensitivity of catchment-scale erosional processes to spatially distributed rainfall inputs.
 
 % A clear relationship between rainfall intensity, flood magnitude, and erosional dynamics is not always observed in case studies (Anton 2012), suggesting that the links between precipitation, hydrological response, and sediment transport are not yet fully understood.
 %
@@ -16,27 +16,39 @@ Temporal variability in rainfall patterns is shown to control the evolution of l
 
 % More detail
 \subsection{Theory}
-The assumption of uniform rainfall over a river catchment is argued to hold true for small catchments \citep{Solyom2004,Tucker2010}, but even over small areas, mesoscale rainfall features, such as localised convective storm cells, can result in spatially and temporally uneven input of precipitation into the catchment. In the case of intense convective precipitation, individual storm cells can be as small as 10km$^2$ in areal extent  \citep{weisman1986characteristics,vonhardenberg2003shape}. Over larger catchments, or those with steep topographic gradients, precipitation is likely to vary spatially, due to orographic enhancement of rainfall \citep{Roe2003}. As such, rainfall-runoff generation, local river and tributary flow, and erosion rates may vary considerably within individual drainage basins. 
+The assumption of uniform rainfall over a river catchment is argued to hold true for small catchments \citep{Solyom2004,Tucker2010}, but even over small areas, mesoscale rainfall features, such as localised convective storm cells, can result in spatially and temporally uneven input of precipitation into the catchment \citep{Peleg2014}. In the case of intense convective precipitation, individual storm cells can be as small as 10km$^2$ in areal extent  \citep{weisman1986characteristics,vonhardenberg2003shape}. Over larger catchments, or those with steep topographic gradients, precipitation is likely to vary spatially, due to orographic enhancement of rainfall \citep{Roe2003,han2015measuring}. As such, rainfall-runoff generation, local river and tributary flow, and erosion rates may vary considerably within individual drainage basins. 
 
-As explored in Chapter \ref{chapter_landscape_evol}, current numerical models of landscape evolution usually omit a realistic distribution of rainfall input in favour of uniform, homogenised precipitation across the landscape. When precipitation is `lumped', either spatially or temporally in a catchment, local minima and maxima of precipitation are lost or smoothed-out, and with discharge being a function of rainfall rate, this smoothing propagates through to local discharges and erosion rates. The uncertainty in erosion rates is potentially exacerbated by the non-linearity and threshold dependence of erosive processes. The variability of precipitation is considered to be as important as total precipitation amount in determining erosional effectiveness \citep{Tucker2000,Tucker2010}. As many geomorphic processes are threshold dependent \citep{schumm1979geomorphic}, such as fluvial incision into bedrock \citep{sklar2001sediment,snyder2003importance}, there is potential for the spatial distribution of rainfall to control local erosion rates within a catchment. 
+As explored in Chapter \ref{chapter_landscape_evol}, current numerical models of landscape evolution usually omit a realistic distribution of rainfall input in favour of uniform, homogenised precipitation across the landscape. When precipitation is `lumped', either spatially or temporally in a catchment, local minima and maxima of precipitation are lost or smoothed-out, and with discharge being a function of rainfall rate, this smoothing should therefore be expected to propagate through to local discharges and erosion rates. The uncertainty in erosion rates is potentially exacerbated by the non-linearity and threshold dependence of erosive processes \citep{coulthard1998non,phillips2003sources}. The variability of precipitation is considered to be as important as total precipitation amount in determining erosional effectiveness \citep{Tucker2000,Tucker2010}. As many geomorphic processes are threshold dependent \citep{schumm1979geomorphic}, such as fluvial incision into bedrock \citep{sklar2001sediment,snyder2003importance}, there is potential for the spatial distribution of rainfall to control local erosion rates within a catchment. 
 %Non-linearity in geomorphic process laws \citep{coulthard1998non,phillips2003sources,coulthard2007cellular} should dictate that catchments are also geomorphically sensitive to the spatial distribution of rainfall. 
 
 Rainfall resolution has been demonstrated to exert a control over sediment yields over decadal and millennial timescales \citep{coulthard2016sensitivity}. In a numerical modelling study of the River Swale catchment, \citet{coulthard2016sensitivity} show that local distribution of erosion as well as catchment-wide sediment yields were predicted to increase by up to 100\% as rainfall data resolution was increased. The study looked at the effects of rainfall spatial data resolution as well the temporal resolution of data, showing both to demonstrate a control over sediment fluxes in a catchment. The study focused on landscape evolution time scales of decades to centuries, rather than individual storm events, and in this study this gap at the shorter end of the catchment evolution time scale will be filled. 
 
-In numerical models of landscape evolution, resolving the precise temporal and spatial details of rain storms and the hydrological response is often computationally prohibitive, especially over long timescales, and as such modellers have taken to using simpler parameterisiations of storm characteristics, such as using simple stochastic models to generate rainfall inputs and rainfall timeseries \citep{Eagleson1978,Tucker2001}. In studies of long term landscape evolution, the sensitivity of landscapes to the spatial distribution of rainfall has been investigated to some extent -- particularly the imprint of orographic precipitation on landscapes \citep[e.g][]{Roe2002,Anders2008,Han2014}. In Chapter \ref{chapter_HAIL-CAESAR}, an existing landscape-evolution model was redeveloped to address some of the computational issues and make it suitable for deployment on a high-performance computing service, enabling more effective use of higher resolution digital topography data to initialise the terrain surface (Chapter \ref{chapter_events}) and finer-resolution rainfall input data to drive the model. 
+In numerical models of landscape evolution, resolving the precise temporal and spatial details of rain storms and the hydrological response is often computationally prohibitive, especially over long timescales, and as such modellers have taken to using simpler parameterisiations of storm characteristics, such as using simple stochastic models to generate rainfall inputs and rainfall timeseries \citep{Eagleson1978,Tucker2001}. In studies of long term landscape evolution, the sensitivity of landscapes to the spatial distribution of rainfall has been investigated to some extent -- particularly the imprint of orographic precipitation on landscapes \citep[e.g][]{Roe2002,Anders2008,han2015measuring}. In Chapter \ref{chapter_HAIL-CAESAR}, an existing landscape-evolution model was redeveloped to address some of the computational issues and make it suitable for deployment on a high-performance computing service, enabling more effective use of higher resolution digital topography data to initialise the terrain surface (Chapter \ref{chapter_events}) and finer-resolution rainfall input data to drive the model. 
 
 \subsection{Objectives}
 The aim of this chapter is to assess how erosional processes are sensitive to the details of precipitation across a catchment during individual storms. The focus in this study is to quantify the sensitivity of catchment-scale erosional processes to the spatial distribution of rainfall during flood events, using the case studies outlined in Chapter \ref{chapter_events}.
 
 The following questions are explored through the use of numerical modelling simulations:
 
-\begin{enumerate}
+\begin{itemize}
 \item Are fluvial erosion and sediment transport processes sensitive to the details of precipitation distribution at the catchment scale during single storm events?
 \item Does the choice of erosional model operating within the catchment influence sensitivity to rainfall patterns? 
 \item What are the implications of this for longer term landscape evolution? 
-\end{enumerate}
+\end{itemize}
 
-To build upon the work done in previous studies \citep[e.g.][]{coulthard2016sensitivity}, this chapter looks at the effects of individual severe rainfall events using a range of erosional end-member models. The study investigates the sensitivity of catchment-scale erosion to the spatial details of severe rain storms -- the agents of long term landscape evolution. Landscape response is investigated using a numerical landscape evolution model that incorporates a dynamic water-routing component \citep{bates2010simple} and a range of fluvial erosion and sediment transport laws \citep{howard1983channel,wilcock2003surface,whipple1999dynamics}. A series of numerical simulations are presented to test how sensitive real landscapes are to the catchment-scale details of precipitation during intense rainfall events. The simulations are each based on selected severe storms in the UK occurring in the past decade, which left significant flooding, damage, and geomorphological change in their wake.
+%The hypothesis for this chapter can be summarised (as in Chapter \ref{chapter_events}, Section \ref{section_experiment_design}) as follows:
+%
+%\begin{enumerate}
+%\item \label{itm:geomorph} \textbf{Erosional processes in river catchments are sensitive to the spatial distribution of rainfall inputs.}
+%  \begin{enumerate}
+%  \item Erosion and sediment transport processes are sensitive to thresholds determining erosion initiation and sediment entrainment.   holds true, then fluvial erosional processes should exhibit sensitivity to the spatial distribution of rainfall inputs of rainfall as well.
+%  \item The parameterisation of erosional processes in the model also determines the spatial pattern of erosion and deposition, but does spatial variation in rainfall inputs exert a greater control than the choice of erosion law?
+%  \end{enumerate}
+%\end{enumerate}
+
+To build upon the work done in previous studies \citep[e.g.][]{coulthard2016sensitivity}, this chapter focuses on timescales not previously investigated: the sensitivity of catchment-scale erosion to the spatial details of severe rain storms. 
+%Landscape response is investigated using a numerical landscape evolution model that incorporates a dynamic water-routing component \citep{bates2010simple} and a range of fluvial erosion and sediment transport laws \citep{howard1983channel,wilcock2003surface,whipple1999dynamics}. 
+Results from series of numerical simulations set out in Chapter \ref{chapter_events} are presented to analyse how sensitive real landscapes are to the catchment-scale details of precipitation during intense rainfall events. The simulations are each based on selected severe storms in the UK occurring in the past decade, which left significant flooding, damage, and geomorphological change in their wake (Chapter \ref{chapter_events}).
 
 %\section{Experiment design}
 %
@@ -59,7 +71,8 @@ To build upon the work done in previous studies \citep[e.g.][]{coulthard2016sens
 \section{Results}
 \subsection{Catchment sediment flux}
 % General description of all results.
-In contrast to water fluxes (Chapter \ref{chapter_flood_model_sensitivity}), sediment flux from the catchments were most sensitive to the sediment erosion parameterisation, rather than the spatial detail of rainfall inputs.. For all catchments and events simulated, sediment flux from the catchment was higher in the simulations using higher resolution rainfall input data. The patterns of peak sediment discharge also mirrored that of water discharge, with sediment flux peaking earlier in the simulations with higher resolution rainfall inputs. 
+%In contrast to water fluxes (Chapter \ref{chapter_flood_model_sensitivity}), 
+Sediment flux from both catchments was found to be most sensitive to the sediment erosion parameterisation, rather than the spatial detail of rainfall inputs. For all catchments and events simulated, sediment flux from the catchment was higher in the simulations using higher resolution rainfall input data. The patterns of peak sediment discharge also mirrored that of water discharge, with sediment flux peaking earlier in the simulations with higher resolution rainfall inputs. 
 
 \begin{figure}[t]
 \includegraphics[width=14cm]{chp06_figures_scripts/figure_boscastle_sedigraph_ensemble.eps}
@@ -75,7 +88,7 @@ In contrast to water fluxes (Chapter \ref{chapter_flood_model_sensitivity}), sed
 
 % Describe planform variations in erosion and deposition
 \subsection{Spatial variations in sediment and bedrock erosion}
-The main spatial variation seen in sediment erosion is seen in river channels, where shear stresses require to initiate erosion and sediment transport are greatest due to the flow of water. The amount of erosion in each simulation was highly sensitive to parameterisation choice of the sediment erosion and transport law, with the choice of rainfall input data (gridded vs uniform) being only a secondary controlling factor on erosion amounts, all other factors being equal. This behaviour was seen on all simulations, in Figure \ref{fig_boscastle_2dplan_erosion_ensemble} and \ref{fig_ryedale_2dplan_erosion_ensemble}. 
+The main spatial variation seen in sediment erosion is seen in river channels, where the shear stresses required to initiate sediment transport are greatest due to the flow of water. The amount of erosion in each simulation was highly sensitive to parameterisation choice of the sediment erosion and transport law, with the choice of rainfall input data (gridded vs uniform) being only a secondary controlling factor on erosion amounts, all other factors being equal. This behaviour was seen on all simulations, in Figure \ref{fig_boscastle_2dplan_erosion_ensemble} and \ref{fig_ryedale_2dplan_erosion_ensemble}. 
 
 To highlight the variation in erosion along the river channel, longitudinal profiles showing the average change in elevation after the storm are shown in Figures \ref{fig_boscastle_swath_tlim} and \ref{fig_ryedale_swath_tlim}. The longitudinal profile shows the variation in erosion along the main channel within each catchment, averaged along a 10 m wide swath centred on the midpoint of the channel. The swath profiling technique is adapted from \citep{hergarten2014extracting}. To reduce the number of points plotted along the swath profile, erosion is also averaged longitudinally, using bins spaced every 200m in the Ryedale catchment and every 50m in the Valency catchment.
 
@@ -105,46 +118,46 @@ The swath profiling of the Rye river channel within the Ryedale catchment shows 
 % Plan view erosion diff maps
 \begin{sidewaysfigure}[t]
 \includegraphics[width=25cm]{chp06_figures_scripts/figure_boscastle_erosion_diff_ensemble.png}
-\caption{Boscastle. Erosion.}
+\caption{Boscastle. River Valency main channel in vicinity of Boscastle village. Net difference in elevation after 72 hours simulation, showing the gridded and uniform rainfall simulations, for each of the two erosion law end-members (transport-limited and detachment-limited). Elevation change smaller than \(\pm\) 0.2m in magnitude is not shown for clarity. Boscastle harbour is located in the upper left corner of each figure.}
 \label{fig_boscastle_2dplan_erosion_ensemble}
 \end{sidewaysfigure}
 
 \begin{sidewaysfigure}[t]
 \includegraphics[width=18cm]{chp06_figures_scripts/figure_boscastle_erosion_diff_ensemble_SE.png}
-\caption{Boscastle. Erosion. SE trib}
+\caption{Boscastle. South-east section of catchment showing the Lesnewth Stream tributary channel. Net difference in elevation after 72 hours simulation, showing the gridded and uniform rainfall simulations, for each of the two erosion law end-members (transport-limited and detachment-limited). Elevation change smaller than \(\pm\) 0.2m in magnitude is not shown for clarity. }
 \label{fig_boscastle_2dplan_erosion_ensemble_SE}
 \end{sidewaysfigure}
 
 % Plan view erosion diff maps
 \begin{sidewaysfigure}[t]
 \includegraphics[width=25cm]{chp06_figures_scripts/figure_ryedale_erosion_diff_ensemble.png}
-\caption{Ryedale. Erosion.}
+\caption{Ryedale. South-east section of Ryedale catchment showing the area around the village of Helmsley. Net difference in elevation after 72 hours simulation, showing the gridded and uniform rainfall simulations, for each of the two erosion law end-members (transport-limited and detachment-limited). Elevation change smaller than \(\pm\) 0.2m in magnitude is not shown for clarity. }
 \label{fig_ryedale_2dplan_erosion_ensemble}
 \end{sidewaysfigure}
 
 % Full extent erosion maps
 \begin{sidewaysfigure}[t]
 \includegraphics[width=25cm]{chp06_figures_scripts/boscastle_erodediff_grid_tlim.png}
-\caption{Boscastle. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the transport limited erosion law. (GRID\_TLIM)}
+\caption{Boscastle. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the transport limited erosion law. Output from the gridded rainfall input, transport-limited erosion simulatio(GRID\_TLIM). Logarithmic scale for erosion.}
 \label{fig_boscastle_erodediff_grid_tlim}
 \end{sidewaysfigure}
 
 \begin{sidewaysfigure}[t]
 \includegraphics[width=25cm]{chp06_figures_scripts/boscastle_erodediff_uniform_tlim.png}
-\caption{Boscastle. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using uniform rainfall and the transport limited erosion law. (UNIFORM\_TLIM)}
+\caption{Boscastle. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using uniform rainfall and the transport limited erosion law. Output from the uniform rainfall, transport-limited simulation (UNIFORM\_TLIM). Logarithmic scale for erosion.}
 \label{fig_boscastle_erodediff_uniform_tlim}
 \end{sidewaysfigure}
 
 % RYEDALE lower reaches
 \begin{figure}[htb]
 \includegraphics[width=16cm]{chp06_figures_scripts/fig_ryedale_lower_erodediff_grid_tlim.png}
-\caption{Ryedale. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the transport limited erosion law. (GRIDDED\_TLIM)}
+\caption{Ryedale. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using gridded rainfall and the transport limited erosion law. Output from the gridded rainfall input, transport-limited erosion simulation (GRIDDED\_TLIM). Logarithmic scale for erosion.}
 \label{fig_ryedale_erodediff_lower_grid_tlim}
 \end{figure}
 
 \begin{figure}[htb]
 \includegraphics[width=16cm]{chp06_figures_scripts/fig_ryedale_lower_erodediff_uniform_tlim.png}
-\caption{Ryedale. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using uniform rainfall and the transport limited erosion law. (UNIFORM\_TLIM)}
+\caption{Ryedale. Map of extent of catchment change in elevation greater than 0.02m. Change in elevation shown after 72 hours of model simulation using uniform rainfall and the transport limited erosion law. Output from the uniform rainfall, transport-limited simulation (UNIFORM\_TLIM). Logarithmic scale for erosion.}
 \label{fig_ryedale_erodediff_lower_uniform_tlim}
 \end{figure}
 
@@ -203,7 +216,7 @@ These experiments have shown that it is the choice of erosional parameterisation
 
 Nevertheless, a further conclusion can also be made that rainfall spatial distribution does have an impact on sediment outputs and distribution of erosion in a catchment during an intense rainfall event, but in the cases shown here, it is a secondary control when compared to the choice and parameterisation of the erosion or sediment transport law. Where there is notable rainfall heterogeneity in a storm, spatially distributed rainfall data can be used to more accurately predict local variations in channel incision within the catchment, as was evident in the observed and predicted erosion patterns in the smaller Boscastle catchment.
 
-The study has touched upon whether landscape evolution models may be used for shorter-term forecasting tools to predict the impact of flash floods on the landscape, should predicting areas of channel erosion and deposition. There are still a number of limitations in current landscape erosion models that prevent them being used as tools with detailed predictive power, notably the sensitivity from the choice of sediment transport laws as highlighted above. Using rainfall radar data as input to the model also introduces a further source of potential error \ref{chapter_metdata}, which further compounds the uncertainty in the eventual prediction made by using a LEM in such a way to provide forecasts of landscape erosion in a single severe rainfall event. 
+The study has touched upon whether landscape evolution models may be used for shorter-term forecasting tools to predict the impact of flash floods on the landscape, should predicting areas of channel erosion and deposition. There are still a number of limitations in current landscape erosion models that prevent them being used as tools with detailed predictive power, notably the sensitivity from the choice of sediment transport laws as highlighted above. Using rainfall radar data as input to the model also introduces a further source of potential error (Chapter \ref{chapter_metdata}), which further compounds the uncertainty in the eventual prediction made by using a LEM in such a way to provide forecasts of landscape erosion in a single severe rainfall event. 
 
 The importance of high magnitude, low frequency storm events in being agents of longer term landscape evolution is reinforced by this study. The amounts of channel incision predicted by the model (and confirmed in previously published post-event surveys), shows that a single storm can have as much erosive impact as decades of higher frequency, lower magnitude events. If one were to extrapolate the differences in predictions from uniform and gridded rainfall inputs based on this study, the effect of rainfall spatial detail could not be said be said to play a primary role on longer term landscape evolution. However, cumulatively the small differences observed between uniform and gridded rainfall inputs to the model may become more pronounced over longer-term landscape evolution simulations. It is important to acknowledge that these findings are based in the context of individual events, and other factors and feedbacks may come into play over longer timescales.
 
