--- a/literature.bib
+++ b/literature.bib
@@ -929,20 +929,28 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0169555X13000214},
 volume = {187},
 year = {2013}
 }
-@article{Han2014,
-author = {Han, Jianwei and Gasparini, Nicole M. and Johnson, Joel P. L. and Murphy, Brendan P.},
-doi = {10.1002/2013JF002961},
-issn = {21699011},
-journal = {Journal of Geophysical Research: Earth Surface},
-keywords = {Hawai'i,bedrock weathering,landscape evolution model,orographic precipitation,river profiles},
-month = {jun},
-number = {6},
-pages = {1418--1440},
-title = {{Modeling the influence of rainfall gradients on discharge, bedrock erodibility, and river profile evolution, with application to the Big Island, Hawai'i}},
-url = {http://doi.wiley.com/10.1002/2013JF002961},
-volume = {119},
-year = {2014}
+@article{han2015measuring,
+  title={Measuring the imprint of orographic rainfall gradients on the morphology of steady-state numerical fluvial landscapes},
+  author={Han, Jianwei and Gasparini, Nicole M and Johnson, Joel PL},
+  journal={Earth Surface Processes and Landforms},
+  volume={40},
+  number={10},
+  pages={1334--1350},
+  year={2015},
+  publisher={Wiley Online Library}
 }
+
+@article{han2014modeling,
+  title={Modeling the influence of rainfall gradients on discharge, bedrock erodibility, and river profile evolution, with application to the Big Island, Hawai'i},
+  author={Han, Jianwei and Gasparini, Nicole M and Johnson, Joel PL and Murphy, Brendan P},
+  journal={Journal of Geophysical Research: Earth Surface},
+  volume={119},
+  number={6},
+  pages={1418--1440},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
 @article{Hansen2011,
 author = {Hansen, J. and Sato, M. and Kharecha, P. and von Schuckmann, K.},
 doi = {10.5194/acp-11-13421-2011},
@@ -3494,3 +3502,53 @@ year = {2002}
   year={2006},
   publisher={Elsevier}
 }
+@article{lane2008climate,
+  title={Climate change and the summer 2007 floods in the UK},
+  author={Lane, Stuart N},
+  journal={Geography},
+  volume={93},
+  number={2},
+  pages={91},
+  year={2008},
+  publisher={Geographical Association}
+}
+@article{jones2014objective,
+  title={Objective classification of extreme rainfall regions for the UK and updated estimates of trends in regional extreme rainfall},
+  author={Jones, Mari R and Blenkinsop, Stephen and Fowler, Hayley J and Kilsby, Christopher G},
+  journal={International Journal of Climatology},
+  volume={34},
+  number={3},
+  pages={751--765},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+@article{wilby2008climate,
+  title={Climate change and fluvial flood risk in the UK: more of the same?},
+  author={Wilby, Rob L and Beven, Keith J and Reynard, NS},
+  journal={Hydrological processes},
+  volume={22},
+  number={14},
+  pages={2511--2523},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+@article{fowler2010detecting,
+  title={Detecting changes in seasonal precipitation extremes using regional climate model projections: Implications for managing fluvial flood risk},
+  author={Fowler, HJ and Wilby, RL},
+  journal={Water Resources Research},
+  volume={46},
+  number={3},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+@article{cinderey2005north,
+  title={North York Moors storms--19 June 2005},
+  author={Cinderey, Mike},
+  journal={Weather},
+  volume={60},
+  number={9},
+  pages={273--273},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
