--- a/thesis.tex
+++ b/thesis.tex
@@ -18,6 +18,10 @@
 %\linenumbers
 \usepackage{listings}
 %\usepackage{epigraph}
+\usepackage{xcolor}
+\usepackage{hyperref}
+\hypersetup{colorlinks=true,allcolors={blue!50!black}}
+\usepackage{hypcap}
 
 %\usepackage[]{hyperref}
 %\hypersetup{
