--- a/chapter_events.tex
+++ b/chapter_events.tex
@@ -3,18 +3,18 @@
 \chaptermark{Severe storms in Cornwall and northern England}
 
 \section{Background}
-Intense rainfall events may be short lived, lasting only a few hours, but have the potential to cause substantial and destructive flooding. In the UK, such storms occur generally in the Summer months, and their severity is often the result of a combination of meteorological factors such as high moisture content in the atmosphere, convective rain cell formation, orographic enhancement of rainfall, and slow-moving or stationary rain cell. The combination of one or more of these characteristic often leads to river catchments being subjected to particularly high-intensity rainfall narrowly focused in a single catchment area or even more localised area within a catchment. Antecedent conditions, such as soil-moisture content, also play a role, but in cases of the most extreme rainfall events, even catchments with a high potential to absorb incoming rainfall or slow its flow towards rivers will be overwhelmed with the rate and volume of water input to the catchment and flooding will be inevitable.
+Intense rainfall events may be short lived, lasting only a few hours, but have the potential to cause substantial and destructive flooding \citep{lane2008climate,pitt2008pitt}. In the UK, many of these storms occur in the summer months \citep{Kendon2014}, and their severity is often the result of a combination of meteorological factors such as high moisture content in the atmosphere, convective rain cell formation, orographic enhancement of rainfall, and slow-moving or stationary rain cells \citep{Barros1994,golding2005boscastle,sibley2009analysis,warren2014boscastle}. The combination of one or more of these characteristics often leads to river catchments being subjected to particularly high-intensity rainfall narrowly focused in a single catchment. Antecedent conditions, such as soil-moisture content, also play a role, but in cases of the most extreme rainfall events, even catchments with a high potential to absorb incoming rainfall or slow its flow towards rivers will be overwhelmed with the rate and volume of water input to the catchment and flooding will be inevitable.
 
-This chapter describes two events that took place in UK river catchments in the Summers of 2004 and 2005 and their representation by a series of numerical modelling experiments. The experiments are designed to investigate the role of rainfall spatial resolution in hydrological and geomorphological processes during severe storms. % Extension from the intro chapter?
+This chapter describes two intense rainfall and flash flooding events in the summers of 2004 and 2005 and their representation in a series of numerical modelling experiments. The experiments are designed to investigate the role of rainfall spatial resolution in hydrological and geomorphological processes during severe storms, as described in Chapter \ref{chapter_intro}. % Extension from the intro chapter?
 
-The Ryedale catchment, near the town of Helmsley, North Yorkshire (2005); and the Valency catchment near the village of Boscastle, Cornwall (2004). Both catchments experienced intense rainfall leading to extensive and damaging flash flooding in each catchment. There were significant economic impacts for both communities affected by the floods, as well as natural geomorphological changes in the river channels and catchments observed in the aftermath of the flooding. 
+The two events used as case studies took place in 1) the Ryedale catchment, near the town of Helmsley, North Yorkshire, 2005; and  2) the Valency catchment near the village of Boscastle, Cornwall, 2004. Both catchments experienced intense rainfall leading to extensive and damaging flash flooding in each catchment \citep{golding2005boscastle,sibley2009analysis}. There were significant economic impacts for both communities affected by the floods, as well as natural geomorphological changes in the river channels and catchments observed in the aftermath of the flooding \citep{wallingford2005flooding,wass2008investigation}.
 
 \section{Meteorological setting}
-Two upland catchments in the UK were selected to represent a range of catchment sizes and shapes. The catchments were also chosen on the basis that they had experienced a severe rain storm which could be used as a basis for the experiments, such that it could be considered `extreme' in the typical return period of flooding events for each particular catchment. Peak discharges for each of the following flood events exceed the 99th percentile for their respective catchments. The catchments and respective severe rain events chosen were located in: Ryedale, North Yorkshire, 2005; Eden, Cumbria 2012; and Boscastle, Cornwall, 2004. An overview map of their locations is given in Figure \ref{fig_location_map}. A table (Table \ref{table_met_setting}) summarises the key features of each catchment and associated storm.
+The catchments were chosen on the basis that they had experienced a severe rain storm which had been identified as causing flash flooding and geomorphological change to the landscape (e.g. erosion, deposition, river channel avulsion). The events were chosen such that they could be considered as infrequent in the typical return period of flooding events for each particular catchment. Since there is no commonly agreed definition of what constitutes an extreme or infrequent event \citep[e.g.][]{wilby2008climate,fowler2010detecting,jones2014objective,}, for the purpose of this study, events only likely to occur approximately once in several hundred years were chosen. Peak discharges for each of the following flood events exceed the 99th percentile for their respective catchments (National River Flow Archives, 20xx).  An overview map of the catchment locations is given in Figure \ref{fig_location_map}, marked by the location of their main settlements. A table (Table \ref{table_met_setting}) summarises the key features of each catchment and its associated storm.
 
 \begin{figure}[htb]
 \includegraphics[width=11cm]{chp_events_figures_scripts/figure_location_map.eps}
-\caption{Location of the two case study catchments and main settlement within each catchment within Britain}
+\caption{Location of the two case study catchments marked by the main settlement within each catchment.}
 \label{fig_location_map}
 \end{figure}
 
@@ -32,7 +32,7 @@ Storm Date	 		            & 2005-06-19 	& 2004-08-16 \\
 Peak Rainfall	 (mm hr \(^{-1}\))  & 125  & c.400 \\
 %Peak Discharge	 	 & & \\ 
 Meteorological Setting	 	& Split-front, convective system & Quasi-stationary convective system \\ 
-3hr Rainfall Return Period 	 & 330yr (Wass et al. 2008)	& 1300yr (Burt, 2005) \\ \hline
+3hr Rainfall Return Period 	 & 330yr \citep{wass2008investigation}	& 1300yr \citep{burt2005cloudburst} \\ \hline
 \end{tabular}
 }
 \caption{Table showing key characteristics of each storm event.}
@@ -40,9 +40,9 @@ Meteorological Setting	 	& Split-front, convective system & Quasi-stationary con
 \end{table}
 
 \subsection{Boscastle, Cornwall storm 2004}
-The Boscastle storm took place on the 16th August 2004 leading to flooding within the River Valency catchment and the village of Boscastle. In the preceding months March--June, the south-west region had been drier than usual, but during July the Valency catchment area experienced average rainfall conditions \citep{golding2005boscastle}. The estimated soil moisture deficit\footnote{The amount of water needed to bring the soil back to field capacity, i.e. a state where the soil is holding the maximum amount of water possible against gravity. \citep{beven2011rainfall}} in the area, which had been lower than average due to the dry antecedent conditions, decreased during the period of 1--16th August, due to the return to average rainfall conditions in that month. The soil moisture deficit during this period was estimated to have decreased from approximately 80--220mm to 40--180mm.
+The Boscastle storm took place on the 16th August 2004 leading to flooding within the River Valency catchment and the village of Boscastle. In the preceding months March--June, the south-west area of Britain had been drier than usual, but during July the Valency catchment area experienced average rainfall conditions \citep{golding2005boscastle}. The estimated soil moisture deficit\footnote{The amount of water needed to bring the soil back to field capacity, i.e. a state where the soil is holding the maximum amount of water possible against gravity. \citep{beven2011rainfall}} in the area, which had been lower than average due to the dry antecedent conditions, decreased during the period of 1--16th August, due to the return to average rainfall conditions in that month. The soil moisture deficit during this period was estimated to have decreased from approximately 80--220mm to 40--180mm \citep{golding2005boscastle}.
 
-On the day of the storm, the extreme rainfall accumulations of up to 200 mm in the upper Valency catchment resulted from prolonged rainfall between the hours of 1200 -- 1600 UTC. Rainfall rates were thought to have reached almost 400 mm hr\(^{-1}\) \citep{golding2005boscastle}, after correcting for under-reporting from rain gauges in the vicinity of the catchment. (Burt, 2006).
+On the day of the storm, the extreme rainfall accumulations of up to 200 mm in the upper Valency catchment resulted from prolonged rainfall between the hours of 1200--1600 UTC. Rainfall rates were thought to have reached almost 400 mm hr\(^{-1}\) \citep{golding2005boscastle}, after correcting for under-reporting from rain gauges in the vicinity of the catchment \citep{burt2005cloudburst}.
 
 %The meteorological conditions that enabled such prolonged heavy rainfall were a combination of large-scale synoptic conditions moving in from the Atlantic, with moist lower atmospheric layers readily forming convective cloud. Repeated initiation of convection along the north Cornish coast lead to what appeared to be relative stationary convective cells over the Valency catchment. Later authors refer to this type of convective storm as a `Boscastle-type' or quasi-stationary convective storm \citep{warren2014boscastle}.
 
@@ -54,7 +54,7 @@ On the day of the storm, the extreme rainfall accumulations of up to 200 mm in t
 
 
 \subsection{Ryedale, North York Moors storm 2005}
-The Ryedale storm occurred on 19 June 2005. Intense rainfall throughout the afternoon lead to total accumulated rainfall amounts of up to 89mm in the Ryedale valley, between the hours of 1400 -- 1800 UTC. Peak instantaneous rainfall rates were estimated to have been around 32.5mm hr\(^-1\) (Sibley et al., 2009) to 59.4 mm hr \(^{-1}\) (Hopkins et al. 2010), though one report states they reached as high as 125 mm hr \(^{-1}\) (Cinderley, 2005). The antecedent conditions had been dry for a prolonged spell, leading to cracking of the surface peat in the higher elevations of the catchment.
+The Ryedale storm occurred on 19 June 2005. Intense rainfall throughout the afternoon led to total accumulated rainfall amounts of up to 89mm in Ryedale, between the hours of 1400--1800 UTC. Peak instantaneous rainfall rates were estimated to have been around 32.5mm hr\(^-1\) \citep{sibley2009analysis} to 59.4 mm hr \(^{-1}\) \citep{hopkins2012knowledge}, though one report states they reached as high as 125 mm hr \(^{-1}\) \citep{cinderey2005north}. The antecedent conditions had been dry for a prolonged spell, leading to cracking of the surface peat in the higher elevations of the catchment.
 
 Antecedent conditions before the Ryedale storm of 2005 had been dry over a prolonged period over much of the region \citep{sibley2009analysis}. Soil moisture deficit was estimated to be around 60mm in the catchment, higher than usual due to the drier conditions in the preceding months \citep{wass2008investigation}. With a low soil moisture content, thinner soils in the upper reaches of the catchment would have been dry before the intense rainfall.
 
@@ -69,10 +69,10 @@ Antecedent conditions before the Ryedale storm of 2005 had been dry over a prolo
 \section{Flooding and geomorphic change}
 
 \subsection{Boscastle, Cornwall, 2004}
-Flooding was extensive in the area surrounding Bosacstle village, with flood levels rapidly exceeding bankfull and flooding several properties to depths of several metres. Water levels in the Valency river and its tributaries began to rise in the early afternoon from approximately 1200 UTC onwards, reaching bankfull around 1430 UTC and peaking at around 1600 UTC, by which point over 70 properties had been flooded, with several destroyed due to the force of the water \citep{wallingford2005flooding}.
+Flooding was extensive in the area surrounding Boscastle village, with flood levels rapidly exceeding bankfull and flooding several properties to depths of several metres. Water levels in the Valency river and its tributaries began to rise in the early afternoon from approximately 1200 UTC onwards, reaching bankfull around 1430 UTC and peaking at around 1600 UTC, by which point over 70 properties had been flooded, with several destroyed due to the force of the water \citep{wallingford2005flooding}.
 The hydraulics of the Boscastle flood were complicated due to the role of large debris blockages (`trash barriers') in the river channels. In particular, a large debris blockage occurred in the main bridge in the village crossing the Valency, which caused a significant backup of water behind the bridge, and re-routing of water through alternate pathways within the village. A reconstruction of the flood based on eyewitness accounts and water mark levels, consequently results in different reports of the peak water level in the village depending on where the observations were made \citep{wallingford2005flooding}. 
 
-The geomorphological impacts of the flood event were well documented in the aftermath of the flood \citep{wallingford2005flooding}. The Valency river channel and many of its tributaries were observed to have experienced channel avulsion\footnote{Movement of the original channel to a new position within the flood plain.} in places, as well as significant downcutting in the upper tributary channels of the catchment. In a number of places the channel avulsion was substantial enough to straighten the channel and increase the local gradient of the river, potentially increasing flow velocities and shear stresses acting on the channel bed. There were large amounts of sediment observed in the river flow at the time, ranging in size from fine silts to boulders. There were some areas of sediment deposition observed along the river channel banks and floodplain, and a sizeable area of sediment deposition in Boscastle harbour. However, most stretches of the main river channel and its tributaries showed net erosion in the form of channel widening (up to 3--4 metres) and deepening (of up to 2 metres) \citep{wallingford2005flooding}.
+The geomorphological impacts of the flood event were well documented in the aftermath of the event \citep{wallingford2005flooding}. The Valency river channel and many of its tributaries were observed to have experienced channel avulsion\footnote{Movement of the original channel to a new position within the flood plain.} in places, as well as significant downcutting in the upper tributary channels of the catchment. In a number of places the channel avulsion was substantial enough to straighten the channel and increase the local gradient of the river, potentially increasing flow velocities and shear stresses acting on the channel bed. There were large amounts of sediment observed in the river flow at the time, ranging in size from fine silts to boulders. There were some areas of sediment deposition observed along the river channel banks and floodplain, and a sizeable area of sediment deposition in Boscastle harbour. However, most stretches of the main river channel and its tributaries showed net erosion in the form of channel widening (up to 3--4 metres) and deepening (of up to 2 metres) \citep{wallingford2005flooding}.
 
 \subsection{Ryedale, North Yorkshire, 2005}
 Flooding was widespread in the Rye catchment, with river levels reaching up to 3.5 m at Hawnby at the peak of the flood, submerging the gauging station building \citep{wass2008investigation}. In Helmsley, the largest settlement, further downstream, similar river level rises of up to 2m were reported at the peak of the flood in the evening and into the night. 
@@ -159,21 +159,24 @@ Ryedale             &  2005-06-18 00:00  &  2005-06-20 23:59 \\
 \label{table_start_time_hydrog_sims}
 \end{table}
 
-\subsubsection{Erosion-enabled simulations}
-A variety of erosion laws exist describing how landscapes erode from fluvial incision. The choice of erosion law for a given catchment depends on a variety of factors, such as the characteristic substrate material in the catchment -- is it predominantly loose sediment or cohesive, solid bedrock? In reality, many upland landscapes in the UK are often a mixture of these two extremes, incorporating a thin layer loose sediment on top of solid bedrock. Streams in such landscapes may be termed mixed-channel systems \citep{howard1998long}, and many variants on the fluvial incision laws incorporating the role of sediments have been proposed \citep{Lague2005,sklar2006role}. Catchments also often exhibit a transition from rockier upland headwaters, to more thickly soil-mantled flood plains. In order to address the uncertainty in choosing which erosion model applies for each catchment (Chapter \ref{chapter_landscape_evol}), two erosion model end-members are used, with each one representing a different conceptual model of fluvial incision and sediment transport. These include: i) a purely sediment transport-limited model \citep{wilcock2003surface}, ii) a detachment-limited bedrock incision model \citep{howard1983channel,stock1999geologic,whipple1999dynamics}. The equations describing the transport-limited and detachment-limited models used in the model are discussed in detail in Chapter \ref{chapter_HAIL-CAESAR}. Further models were considered, such as a hybrid transport-detachment limited erosion model, but it was deemed beyond the scope of this study, which is to focus on the sensitivity of rainfall resolution, rather than wide range of erosion and sediment transport models. Instead it was opted to use two simple variants of sediment erosion laws to keep the range of model simulations parsimonious. 
-
-A set of control simulations (suffixed `HYDRO', for example in Table \ref{table_ensemble_experiments}) incorporating only rainfall-runoff and surface water routing (with no erosion taking place) were also carried out for comparison against the two erosion end-member simulations. The analysis from these experiments is used to investigate the sensitivity of flood-inundation prediction to geomorphic change during floods, and the results and discussion are presented in CHapter \ref{chapter_flood_model_sensitivity}.
-
-%\paragraph*{Hybrid model}
-%The hybrid model assumes a limited-depth sediment layer, overlying a bedrock layer. Figure \ref{hybrid_model} shows a typical cross section through a typical valley in the hybrid model set-up. In the initial model state (before the spin-up period), a channel is 'burnt-in' to the sediment-layer. Whenever bedrock becomes exposed during the hybrid simulation, the simple detachment-limited erosion law is applied. Material removed from the bedrock layer is then apportioned between the various sediment fractions. At all other times, the sediment transport law applies to the sediment layer. 
-
 \subsubsection{Rainfall spatial resolution}
-In order to assess the sensitivity of each erosional model to the spatial details of precipitation, rainfall spatial parameterisation is alternated in each simulation between a spatially uniform rainfall input and a 1km gridded rainfall input. Both the spatially uniform and gridded inputs are based on the same original rainfall source data - the UK Nimrod 1km-composite radar data product \citep{metoffice2003nimrod}. To reduce the range of variables within the set of ensemble simulations, only the spatial distribution and resolution of rainfall is assessed in this study -- other studies have previously investigated the effects of the \textit{temporal} resolution of rainfall data on discharge and erosion rates \citep{nicotina2008impact,Coulthard2013,coulthard2016sensitivity}. In all experiments, the temporal resolution of experiments is maintained at 5 minute intervals. To summarise, the two types of rainfall spatial input used are: 
+In order to assess the sensitivity of the hydrogeomorphic processes in the catchment to the spatial details of precipitation, rainfall spatial inputs are alternated in each simulation between a spatially uniform rainfall input and a 1km gridded rainfall input. Both the spatially uniform and gridded inputs are based on the same original rainfall source data -- the UK Nimrod 1km-composite radar data product \citep{metoffice2003nimrod}. To reduce the range of variables within the set of ensemble simulations, only the spatial resolution of rainfall is assessed in this study -- other studies have previously investigated the effects of the \textit{temporal} resolution of rainfall data on discharge and erosion rates \citep{nicotina2008impact,Coulthard2013,coulthard2016sensitivity}. In all experiments, the temporal resolution of rainfall data is maintained at 5 minute intervals. To summarise, the two types of rainfall spatial input used are: 
 
 \begin{itemize}
 \item Uniform or `lumped' precipitation: Radar-derived rainfall rates across the catchment are spatially-averaged to produce a basin-wide rainfall rate. In other words, every grid cell in the model domain receives the same rainfall rate at each rainfall data timestep.
 \item Gridded rainfall input. The rainfall rate is input from a overlying gridded mesh of raincells, at the same resolution as the rainfall radar product (1km).
 \end{itemize}
+
+\subsubsection{Erosion-enabled simulations}
+A variety of erosion laws exist describing how landscapes erode from fluvial erosion. The choice of erosion law for a given catchment depends on a variety of factors, such as the characteristic substrate material in the catchment -- is it predominantly loose sediment or cohesive, solid bedrock? In reality, many upland landscapes in the UK are often a mixture of these two extremes, incorporating a thin layer of loose sediment on top of solid bedrock. Streams in such landscapes may be termed mixed-channel systems \citep{howard1998long}, and many variants on the fluvial incision laws incorporating the role of sediments have been proposed \citep{Lague2005,sklar2006role}. Catchments also often exhibit a transition from rockier upland headwaters, to more thickly soil-mantled flood plains. In order to address the sensitivity to the choice of erosion model for each event simulation (Chapter \ref{chapter_landscape_evol}), two erosion model end-members are used, with each one representing a different conceptual model of fluvial erosion and sediment transport. These include: i) a purely sediment transport-limited model \citep{wilcock2003surface}, ii) a detachment-limited bedrock erosion model \citep{howard1983channel,stock1999geologic,whipple1999dynamics}. The equations describing the transport-limited and detachment-limited models used in the model are discussed in detail in Chapter \ref{chapter_HAIL-CAESAR}. Further models were considered, such as a hybrid transport-detachment limited erosion model, but it was deemed beyond the scope of this study, which is primarily to investigate the role of rainfall heterogeneity, rather than wide range of erosion and sediment transport models. In keeping with the primary aim of the study, it was opted to use two simple variants of sediment erosion laws to keep the range of model simulations parsimonious. 
+
+\subsubsection{Flood inundation only simulations}
+A set of control simulations (suffixed \textit{HYDRO}, for example in Table \ref{table_ensemble_experiments}) incorporating only rainfall-runoff and surface water routing (with no erosion taking place) were also carried out for comparison against the two erosion end-member simulations. The analysis from these experiments is used to investigate the sensitivity of flood-inundation prediction to geomorphic change during floods, and the results and discussion are presented in Chapter \ref{chapter_flood_model_sensitivity}.
+
+%\paragraph*{Hybrid model}
+%The hybrid model assumes a limited-depth sediment layer, overlying a bedrock layer. Figure \ref{hybrid_model} shows a typical cross section through a typical valley in the hybrid model set-up. In the initial model state (before the spin-up period), a channel is 'burnt-in' to the sediment-layer. Whenever bedrock becomes exposed during the hybrid simulation, the simple detachment-limited erosion law is applied. Material removed from the bedrock layer is then apportioned between the various sediment fractions. At all other times, the sediment transport law applies to the sediment layer. 
+
+
 
 %\subsubsection{Model spin-up}
 %
@@ -181,6 +184,6 @@ In order to assess the sensitivity of each erosional model to the spatial detail
 
 \section{Summary}
 
-Using case studies from two flash flood events in the UK in recent decades, a series of simulations has been designed to investigate the effects of rainfall spatial resolution has on flood inundation modelling, sediment erosion and transport, and catchment-scale hydrogeomorphic processes. The simulations are designed to answer the questions laid out in Chapter \ref{chapter_intro} and the hypotheses summarised in Section \ref{section_experiment_design}. 
+Using case studies from two flash flood events in the UK that took place in recent decades, a series of simulations has been designed to investigate the effects of rainfall spatial resolution has on flood inundation modelling, sediment erosion and transport, and catchment-scale hydrogeomorphic processes. The simulations are designed to answer the questions laid out in Chapter \ref{chapter_intro} and the hypotheses summarised in Section \ref{section_experiment_design}. 
 
 The results and analysis of the simulations are discussed in the subsequent chapters. Chapter \ref{chapter_flood_model_sensitivity} analyses and discusses the effects the rainfall spatial resolution has on flood inundation prediction in a hydrodynamic model, and also looks a the effects that geomorphic change during a flood has on flood dynamics. This addresses Question \ref{itm:flood} laid out in Section \ref{section_experiment_design} above. Chapter \ref{chapter_hydrogeomorph} analyses the results of the simulations focusing on sediment erosion and transport, discussing whether the spatial patterns of rainfall control the distribution of erosion and deposition in a catchment. The implications for longer term landscape evolution modelling are also discussed. This chapter address Question \ref{itm:geomorph} laid out in Section \ref{section_experiment_design} above. Conclusions and links between rainfall inputs, hydrological, and geomorphological processes are discussed in Chapter \ref{chapter_conclusion}.
